--- a/task/src/index.html
+++ b/task/src/index.html
@@ -8,6 +8,21 @@
 <body>
     <blockquote id="quote">Press the key please!</blockquote>
 
+    <div class="muzieknootjes">
+        <div class="noot-1">
+            &#9835; &#9833;
+        </div>
+        <div class="noot-2">
+            &#9833;
+        </div>
+        <div class="noot-3">
+            &#9839; &#9834;
+        </div>
+        <div class="noot-4">
+            &#9834;
+        </div>
+    </div>
+
     <div class = "container">
         <div class="white-keys">
             <kbd id="keyA">A</kbd>
